--- a/index.html
+++ b/index.html
@@ -1,93 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basam Videos</title>
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #111;
+      background: #111;
       color: white;
+      font-family: Arial, sans-serif;
     }
 
     header {
-      background-color: #000;
-      padding: 20px;
       text-align: center;
-      font-size: 28px;
+      padding: 20px;
+      font-size: 24px;
       font-weight: bold;
+      background: black;
     }
 
     .container {
-      padding: 30px;
+      padding: 15px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 15px;
     }
 
-    .card {
-      background-color: #222;
-      border-radius: 8px;
+    .video-card {
+      background: #222;
+      border-radius: 10px;
       overflow: hidden;
-      cursor: pointer;
     }
 
-    .thumbnail {
-      height: 150px;
-      background-color: #444;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-      color: #aaa;
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
     }
 
     .info {
-      padding: 15px;
-    }
-
-    .info h3 {
-      margin: 0;
-      font-size: 16px;
-    }
-
-    .info p {
-      margin: 5px 0 0;
-      font-size: 13px;
-      color: #bbb;
+      padding: 10px;
+      font-size: 14px;
     }
   </style>
 </head>
 
 <body>
-  <header>
-    Basam Video Hub
-  </header>
 
-  <div class="container">
-    <div class="card">
-      <div class="thumbnail">Thumbnail</div>
-      <div class="info">
-        <h3>Sample Video Title</h3>
-        <p>Category • 5 min</p>
-      </div>
-    </div>
+<header>Basam Video Hub</header>
 
-    <div class="card">
-      <div class="thumbnail">Thumbnail</div>
-      <div class="info">
-        <h3>Another Video</h3>
-        <p>Category • 8 min</p>
-      </div>
-    </div>
+<div class="container">
 
-    <div class="card">
-      <div class="thumbnail">Thumbnail</div>
-      <div class="info">
-        <h3>Trending Now</h3>
-        <p>Category • 12 min</p>
-      </div>
-    </div>
+  <div class="video-card">
+    <video controls>
+      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    </video>
+    <div class="info">Sample Video 1</div>
   </div>
+
+  <div class="video-card">
+    <video controls>
+      <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
+    </video>
+    <div class="info">Sample Video 2</div>
+  </div>
+
+</div>
+
 </body>
 </html>
